@@ -1,0 +1,4 @@
+# Target: Matsushita mn10300
+TDEPFILES= mn10300-tdep.o
+SIM_OBS = remote-sim.o
+SIM = ../sim/mn10300/libsim.a
